feat: update css

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       </div>
 
       <!-- Directions Section -->
-      <section class="section">
+      <section class="section last">
         <div class="sub_img_wrap">
           <img
             src="./image/heart2.png"
@@ -387,7 +387,7 @@
       </section>
 
       <!-- Account Information Section -->
-      <section class="section">
+      <section class="section last">
         <div class="title">계좌번호</div>
         <div class="account col_couple_name" var="account">
           <div
