--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>4kapas</title>
+    <title>김준수 ♡ 이예나 결혼합니다.</title>
     <link rel="stylesheet" href="./css/common.css" />
     <link
       rel="stylesheet"
