--- a/index.html
+++ b/index.html
@@ -130,9 +130,79 @@
           </div>
         </div>
       </section>
-
+      <section class="section3 aos-init aos-animate" aos="" data-aos="fade-up">
+              <div class="tel_wrap2">
+                <div class="img_con row_couple_name">
+            <div class="img_box">
+              <img src="./image/21.jpg" alt="" var="groomImgId" style="display:block; object-position: 50% 25%;">
+            </div>
+            <div class="img_box">
+              <img src="./image/20.jpg" alt="" var="brideImgId" style="display:block;  object-position: 50% 20%;
+              scale: 2.1; position: relative; left: -18px;">
+            </div>
+          </div>
+          <div class="name_con row_couple_name">
+            <div class="name_list groom">
+              <div class="name_box">
+                신랑  <span class="name row_groom_name"><span var="groomLastName"></span><span var="groomFirstName">김준수</span></span>
+              </div>
+              <div class="icon" style="display:block" var="useContact">
+                <a href="tel:01038625730" class="" var="groomTel" style="display:block"><i class="xi-call"></i></a>
+              </div>
+            </div>
+            <div class="name_list bride">
+              <div class="name_box">
+                신부  <span class="name row_bride_name"><span var="brideLastName"></span><span var="brideFirstName">이예나</span></span>
+              </div>
+              <div class="icon" style="display:block" var="useContact">
+                <a href="tel:01029357366" class="" var="brideTel" style="display:block"><i class="xi-call"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="introduce_con row_couple_name">
+            <div class="introduce_list groom" var="groomIntro"></div>
+            <div class="introduce_list bride" var="brideIntro"></div>
+          </div>
+          <div class="relation_con row_couple_name">
+            <div class="relation_list groom">
+              <span class="parents">
+                                                <span class="img_box" style="display:none" var="isGroomDadAngel0">
+                                                </span>
+                                                <span class="char_box" style="display:none" var="isGroomDadAngel1">故</span>
+                                                <span var="groomDadLastName">김</span><span var="groomDadFirstName">종은</span>
+                                                <span var="groomDot">·</span>
+                                                <span class="img_box" style="display:none" var="isGroomMomAngel0">
+                                                </span>
+                                                <span class="char_box" style="display:none" var="isGroomMomAngel1">故</span>
+                                                <span var="groomMomLastName">권</span><span var="groomMomFirstName">영애</span>
+                                            </span>
+              <span class="relation" style="display:inline-block">
+                                                <span>의</span>
+                                                <span var="groomRelationName">장남</span>
+                                            </span>
+            </div>
+            <div class="relation_list bride">
+                                            <span class="parents">
+                                                <span class="img_box" style="display:none" var="isBrideDadAngel0">
+                                                </span>
+                                                <span class="char_box" style="display:none" var="isBrideDadAngel1">故</span>
+                                                <span var="brideDadLastName">이</span><span var="brideDadFirstName">정엽</span>
+                                                <span var="brideDot" style="display:inline-block">·</span>
+                                                <span class="img_box" style="display:none" var="isBrideMomAngel0">
+                                                </span>
+                                                <span class="char_box" style="display:none" var="isBrideMomAngel1">故</span>
+                                                <span var="brideMomLastName">김</span><span var="brideMomFirstName">혜숙</span>
+                                            </span>
+              <span class="relation" style="display:inline-block">
+                                                <span>의</span>
+                                                <span var="brideRelationName">장녀</span>
+                                            </span>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- Calendar Section -->
-      <section class="section">
+      <section class="section" id="calendar">
         <div class="main-img-wrap reset">
           <img src="./image/calendar.png" alt="" />
         </div>
@@ -144,7 +214,7 @@
           <img
             src="./image/rose2.png"
             alt=""
-            style="width: 122px; margin: 0 auto 63px"
+            style="width: 122px; margin: 80px auto 50px"
           />
         </div>
         <div class="grid">
@@ -154,9 +224,7 @@
           <div class="main-img-wrap">
             <img src="./image/2.jpg" alt="" class="gallery-image" />
           </div>
-          <div class="main-img-wrap">
-            <img src="./image/3.jpg" alt="" class="gallery-image" />
-          </div>
+
           <div class="main-img-wrap">
             <img src="./image/4.jpg" alt="" class="gallery-image" />
           </div>
@@ -166,9 +234,7 @@
           <div class="main-img-wrap">
             <img src="./image/6.jpg" alt="" class="gallery-image" />
           </div>
-          <div class="main-img-wrap">
-            <img src="./image/7.jpg" alt="" class="gallery-image" />
-          </div>
+
           <div class="main-img-wrap">
             <img src="./image/8.jpg" alt="" class="gallery-image" />
           </div>
@@ -178,21 +244,14 @@
           <div class="main-img-wrap">
             <img src="./image/10.jpg" alt="" class="gallery-image" />
           </div>
-          <div class="main-img-wrap">
-            <img src="./image/11.jpg" alt="" class="gallery-image" />
-          </div>
+
           <div class="main-img-wrap">
             <img src="./image/12.jpg" alt="" class="gallery-image" />
           </div>
           <div class="main-img-wrap">
             <img src="./image/13.jpg" alt="" class="gallery-image" />
           </div>
-          <div class="main-img-wrap">
-            <img src="./image/14.jpg" alt="" class="gallery-image" />
-          </div>
-          <div class="main-img-wrap">
-            <img src="./image/15.jpg" alt="" class="gallery-image" />
-          </div>
+
           <div class="main-img-wrap">
             <img src="./image/16.jpg" alt="" class="gallery-image" />
           </div>
@@ -239,9 +298,10 @@
                   <img src="./image/2.jpg" alt="" />
                 </div>
               </div>
+
               <div class="swiper-slide">
                 <div class="main-img-wrap">
-                  <img src="./image/3.jpg" alt="" />
+                  <img src="./image/4.jpg" alt="" />
                 </div>
               </div>
               <div class="swiper-slide">
@@ -254,11 +314,7 @@
                   <img src="./image/6.jpg" alt="" />
                 </div>
               </div>
-              <div class="swiper-slide">
-                <div class="main-img-wrap">
-                  <img src="./image/7.jpg" alt="" />
-                </div>
-              </div>
+
               <div class="swiper-slide">
                 <div class="main-img-wrap">
                   <img src="./image/8.jpg" alt="" />
@@ -274,11 +330,7 @@
                   <img src="./image/10.jpg" alt="" />
                 </div>
               </div>
-              <div class="swiper-slide">
-                <div class="main-img-wrap">
-                  <img src="./image/11.jpg" alt="" />
-                </div>
-              </div>
+
               <div class="swiper-slide">
                 <div class="main-img-wrap">
                   <img src="./image/12.jpg" alt="" />
@@ -289,16 +341,7 @@
                   <img src="./image/13.jpg" alt="" />
                 </div>
               </div>
-              <div class="swiper-slide">
-                <div class="main-img-wrap">
-                  <img src="./image/14.jpg" alt="" />
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="main-img-wrap">
-                  <img src="./image/15.jpg" alt="" />
-                </div>
-              </div>
+
               <div class="swiper-slide">
                 <div class="main-img-wrap">
                   <img src="./image/16.jpg" alt="" />
@@ -358,7 +401,7 @@
           <img
             src="./image/heart2.png"
             alt=""
-            style="width: 122px; margin: 0 auto 63px"
+            style="width: 122px; margin: 103px auto 21px"
           />
         </div>
         <div class="title">오시는 길</div>
@@ -390,7 +433,7 @@
           <img
             src="./image/heart.png"
             alt=""
-            style="width: 24px; margin: 0 auto 10px"
+            style="width: 24px; margin: 103px auto 21px"
           />
         </div>
         <div class="title">마음 전하실 곳</div>
@@ -400,9 +443,9 @@
             aos=""
             data-aos="fade-up"
           >
-            <div class="account_box" style="color: #5f8b9b;">
+            <div class="account_box" style="color: #8ab8da;">
               신랑측
-              <i class="xi-angle-down"></i>
+              <img src="./image/heart.png" alt=""  style="    height: 20px;">
             </div>
             <ul class="account_list" style="display: none">
               <li var="isGroomBank">
@@ -416,7 +459,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4  style="color: #5f8b9b;">신랑</h4>
+                    <h4  style="color: #8ab8da;">신랑</h4>
                     <span class="holder" var="groomBankHolder">김준수</span>
                   </div>
                   <div style="display: flex">
@@ -429,6 +472,11 @@
                   </div>
                 </div>
                 <div class="right_box">
+                  <a
+                  href="tel:010-3073-9118"
+                  class="s_btn"
+                  ><span style="filter: brightness(0);">&#128222;</span></a
+                >
                   <a
                     href="javascript:;"
                     class="s_btn"
@@ -455,7 +503,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4  style="color: #5f8b9b;">신랑 <span var="brideDadText">아버지</span></h4>
+                    <h4  style="color: #8ab8da;">신랑 <span var="brideDadText">아버지</span></h4>
                     <span class="holder" var="brideDadBankHolder">김종은</span>
                   </div>
                   <div style="display: flex">
@@ -468,6 +516,11 @@
                   </div>
                 </div>
                 <div class="right_box">
+                  <a
+                  href="tel:010-7399-9118"
+                  class="s_btn"
+                  ><span style="filter: brightness(0);">&#128222;</span></a
+                >
                   <a
                     href="javascript:;"
                     class="s_btn"
@@ -487,7 +540,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4  style="color: #5f8b9b;">신랑 <span var="brideMomText">어머니</span></h4>
+                    <h4  style="color: #8ab8da;">신랑 <span var="brideMomText">어머니</span></h4>
                     <span class="holder" var="brideMomBankHolder">권영애</span>
                   </div>
                   <div style="display: flex">
@@ -500,6 +553,11 @@
                   </div>
                 </div>
                 <div class="right_box">
+                  <a
+                  href="tel:010-7508-9118"
+                  class="s_btn"
+                  ><span style="filter: brightness(0);">&#128222;</span></a
+                >
                   <a
                     href="javascript:;"
                     class="s_btn"
@@ -516,9 +574,9 @@
             aos=""
             data-aos="fade-up"
           >
-            <div class="account_box bride_account" style="color: #f4cce0;">
+            <div class="account_box bride_account" style="color: #f6c2e2;">
               신부측
-              <i class="xi-angle-down"></i>
+              <img src="./image/heart.png" alt="" style="    height: 20px;">
             </div>
             <ul class="account_list" style="display: none">
               <li var="isBrideBank">
@@ -532,7 +590,7 @@
                 />
                 <div class="left_box">
                   <div>
-                  <h4 style="color: #f4cce0;">신부</h4>
+                  <h4 style="color: #f6c2e2;">신부</h4>
                   <span class="holder" var="brideBankHolder">이예나</span>
                 </div>
                 <div style="display: flex">
@@ -543,7 +601,12 @@
                 </div>
               </div>
 
-                <div class="right_box">
+                <div class="right_box" style="text-align: center;">
+                  <a
+                  href="tel:010-2579-9653"
+                  class="s_btn"
+                  ><span style="filter: brightness(0);">&#128222;</span></a
+                >
                   <a
                     href="javascript:;"
                     class="s_btn"
@@ -557,6 +620,7 @@
                     class="s_btn kakao_btn"
                     >PAY</a
                   >
+                  
                 </div>
               </li>
               <li var="isBrideDadBank">
@@ -570,19 +634,24 @@
                 />
                 <div class="left_box">
                   <div >
-                  <h4 style="color: #f4cce0;">신부 <span var="brideDadText">아버지</span></h4>
+                  <h4 style="color: #f6c2e2;">신부 <span var="brideDadText">아버지</span></h4>
                   <span class="holder" var="brideDadBankHolder">이정엽</span>
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideDadBankAcc">
-                    018-21-0694-222
+                    110-330-954-338
                   </div>
                   <div class="acc_name">
-                    <span class="bank" var="brideDadBankName">국민은행</span>
+                    <span class="bank" var="brideDadBankName">신한은행</span>
                   </div>
                 </div>
                 </div>
                 <div class="right_box">
+                  <a
+                  href="tel:010-2281-9653"
+                  class="s_btn"
+                  ><span style="filter: brightness(0);">&#128222;</span></a
+                >
                   <a
                     href="javascript:;"
                     class="s_btn"
@@ -603,19 +672,24 @@
                 />
                 <div class="left_box">
                   <div >
-                  <h4 style="color: #f4cce0;">신부 <span var="brideMomText">어머니</span></h4>
+                  <h4 style="color: #f6c2e2;">신부 <span var="brideMomText">어머니</span></h4>
                   <span class="holder" var="brideMomBankHolder">김혜숙</span>
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideMomBankAcc">
-                    854-21-0214-054
+                    100090-51-164879
                   </div>
                   <div class="acc_name">
-                    <span class="bank" var="brideMomBankName">국민은행</span>
+                    <span class="bank" var="brideMomBankName">농협은행</span>
                   </div>
                 </div>
                 </div>
                 <div class="right_box">
+                  <a
+                  href="tel:010-6287-9653"
+                  class="s_btn"
+                  ><span style="filter: brightness(0);">&#128222;</span></a
+                >
                   <a
                     href="javascript:;"
                     class="s_btn"
@@ -641,14 +715,16 @@
           el: ".swiper-scrollbar",
           hide: true,
         },
+        initialSlide: 0, 
       });
 
       const modalOverlay = document.querySelector(".modal-overlay");
       const galleryImages = document.querySelectorAll(".gallery-image");
       const closeBtn = document.querySelector(".close-btn");
 
-      galleryImages.forEach((img) => {
+      galleryImages.forEach((img, index) => {
         img.addEventListener("click", () => {
+          swiper.slideTo(index);
           modalOverlay.style.display = "flex";
         });
       });
@@ -687,7 +763,7 @@
 
             var infowindow = new kakao.maps.InfoWindow({
               content:
-                '<div style="width:150px;text-align:center;padding:6px 0;">여의도 켄싱턴 호텔</div>',
+                '<div style="width:150px;text-align:center;padding:6px 0;">여의도 켄싱턴호텔</div>',
             });
 
             map.setCenter(coords);
@@ -696,10 +772,12 @@
       );
 
       document.addEventListener("DOMContentLoaded", () => {
-        // Account box toggle
+
         document.querySelectorAll(".account_box").forEach((box) => {
           box.addEventListener("click", function () {
-            const accountList = this.nextElementSibling; // 다음 형제 요소 (.account_list)
+            const accountList = this.nextElementSibling; 
+            event.target.children[0].classList.toggle('active')
+
             accountList.style.display =
               accountList.style.display === "none" ||
               accountList.style.display === ""
@@ -723,5 +801,6 @@
         };
       });
     </script>
+
   </body>
 </html>
