--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                   </div>
                   <div style="display: flex">
                     <div class="acc_num" var="brideDadBankAcc">
-                      018-21-0694-222
+                      174210029178
                     </div>
                     <div class="acc_name">
                       <span class="bank" var="brideDadBankName">국민은행</span>
@@ -545,10 +545,10 @@
                   </div>
                   <div style="display: flex">
                   <div class="acc_num" var="brideMomBankAcc">
-                    854-21-0214-054
+                    106802000784
                   </div>
                   <div class="acc_name">
-                    <span class="bank" var="brideMomBankName">국민은행</span>
+                    <span class="bank" var="brideMomBankName">농협은행</span>
                   </div>
                   </div>
                 </div>
@@ -639,7 +639,7 @@
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideDadBankAcc">
-                    110-330-954-338
+                    110330954338
                   </div>
                   <div class="acc_name">
                     <span class="bank" var="brideDadBankName">신한은행</span>
@@ -677,7 +677,7 @@
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideMomBankAcc">
-                    100090-51-164879
+                    10009051164879
                   </div>
                   <div class="acc_name">
                     <span class="bank" var="brideMomBankName">농협은행</span>
