--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           <div class="main-img-wrap postion-a" style="text-align: center">
             <img
-              src="./image/main_img_1.jpg"
+              src="./image/8.jpg"
               alt=""
               style="
                 /* border-radius: 13px; */
@@ -267,12 +267,7 @@
           <div class="main-img-wrap">
             <img src="./image/20.jpg" alt="" class="gallery-image" />
           </div>
-          <div class="main-img-wrap">
-            <img src="./image/21.jpg" alt="" class="gallery-image" />
-          </div>
-          <div class="main-img-wrap">
-            <img src="./image/22.jpg" alt="" class="gallery-image" />
-          </div>
+
         </div>
       </section>
 
@@ -367,16 +362,7 @@
                   <img src="./image/20.jpg" alt="" />
                 </div>
               </div>
-              <div class="swiper-slide">
-                <div class="main-img-wrap">
-                  <img src="./image/21.jpg" alt="" />
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="main-img-wrap">
-                  <img src="./image/22.jpg" alt="" />
-                </div>
-              </div>
+
             </div>
             <!-- <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div> -->
@@ -639,7 +625,7 @@
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideDadBankAcc">
-                    110330954338
+                    110-330-954-338
                   </div>
                   <div class="acc_name">
                     <span class="bank" var="brideDadBankName">신한은행</span>
@@ -677,7 +663,7 @@
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideMomBankAcc">
-                    10009051164879
+                    100090-51-164879
                   </div>
                   <div class="acc_name">
                     <span class="bank" var="brideMomBankName">농협은행</span>
